cahnged the holixantal and vertical scrollbar to holizontal and fixed the setcode issue whcih was causing

--- a/carbon-clone/src/index.css
+++ b/carbon-clone/src/index.css
@@ -91,3 +91,9 @@ body {
   scrollbar-width: none;  /* Firefox */
 }
 
+CodeMirror{
+  font-size:"16px";
+   font-family:'"Fira Code", monospace';
+
+}
+
